--- a/week-5/homework/v4/index.html
+++ b/week-5/homework/v4/index.html
@@ -75,14 +75,16 @@
   <body
     class="bg-black text-white min-h-screen flex items-center justify-center bg-black"
   >
-    <div class="absolute top-0 left-0 w-full h-full" id="room">
+    <div class="absolute top-0 left-0 w-full h-full overflow-hidden" id="room">
       <div id="wall-left"></div>
       <div id="wall-right"></div>
       <div id="wall-front"></div>
       <div id="ceiling"></div>
     </div>
 
-    <div class="text-center">
+    <div
+      class="text-center w-full min-h-screen overflow-hidden flex items-center justify-center"
+    >
       <div id="canvas-container"></div>
     </div>
 
