--- a/week-6/homework/v2/index.html
+++ b/week-6/homework/v2/index.html
@@ -10,7 +10,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/p5.min.js"></script>
   </head>
   <body
-    class="bg-black text-white min-h-screen flex items-center justify-center"
+    class="bg-black text-white min-h-screen flex flex-col items-center justify-center"
     oncontextmenu="return false;"
   >
     <div class="text-center">
@@ -25,6 +25,13 @@
             </div>
           </div>
         </div>
+      </div>
+      <div
+        class="text-center text-sm mt-4 text-white/50 flex flex-row justify-between"
+      >
+        <div>left click to draw</div>
+        <div>scroll to zoom</div>
+        <div>right click to orbit</div>
       </div>
     </div>
 
