--- a/week-8/homework/v1/index.html
+++ b/week-8/homework/v1/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Line Globe</title>
+    <title>Line Globe - Gestures</title>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- P5.js CDN -->
@@ -31,9 +31,9 @@
       <div
         class="text-center text-sm mt-4 text-white/50 flex flex-row justify-between"
       >
-        <div>left click to draw</div>
-        <div>scroll to zoom</div>
-        <div>right click to orbit</div>
+        <div>left hand pinch to orbit</div>
+        <div>both hands fist to zoom</div>
+        <div>right hand pinch to draw</div>
       </div>
     </div>
 
