--- a/week-8/homework/v1/index.html
+++ b/week-8/homework/v1/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Line Globe - Gestures</title>
+    <title>Line Globe with Gestures</title>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- P5.js CDN -->
