--- a/final/v2/index.html
+++ b/final/v2/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pizza Maker</title>
+    <title>Audible Triangle</title>
     <link href="/src/style.css" rel="stylesheet" />
   </head>
   <body
